# pneumonia-classifier

./: .flake8  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  setup.py
.github/workflows/: test.yml  tests.yml
docker/: Dockerfile.api  Dockerfile.training
pneumonia_classifier/: __init__.py  config.py  model.py  utils.py
pneumonia_classifier/api/: main.py  routes.py
pneumonia_classifier/data/: dataset.py
pneumonia_classifier/models/: resnet.py
scripts/: api.py  api_client.py  build_and_push.py  deploy_to_azure.py  mlflow_ui.py  predict.py  train.py
tests/: __init__.py  conftest.py  test_api.py  test_error_handling.py  test_integration.py  test_model.py
